   (Bug #486946, Luis Arias)
 * Fix bug where Mac OS X windows start in background. (Bug #417162,
   Luis Arias)
 * Fix bug in treewidget where folders are repeated.
   (Bug #580798, Iwata, Gary van der Merwe)
 * qupdate, qunbind, qgetupdates:  new --immediate option will run these
   commands without waiting for the user to click on the Ok button (Luis Arias)

0.19 Beta 1 "Monkey-puzzle, aka Araucaria araucana" - 2010/03/29
----------------------------------------------------------------
 * Added Hungarian translation.
 * qcommit: Give the user the option to update the branch if it is not up to
   date. (Bug #439920, Gary van der Merwe)
 * qpush, qmerge, etc.: When there are uncommit changes in the working tree,
   give the user the option to commit, or revert. (Gary van der Merwe)
 * qlog: Improve performance by using KnownGraph. (John Arbash Meinel,
   Gary van der Merwe)
 * TreeWidget dialogs (qcommit, qadd, qrevert, qbrowse):
   Performance improvements for select all, and changeing filters.
   (Bug #513105, Bug #476641, Gary van der Merwe)
 * Improve startup performance by using lazy imports. (Gary van der Merwe)

Note: qbzr now requires bzr 2.1.

0.18.6 - 2010-05-04
-------------------
Maintenance release.

 * qlog: Fix a bug with search. (Bug #575338, Gary van der Merwe)

0.18.5 "Silver terminalia" - 2010-04-02
---------------------------------------
Maintenance release.

 * qsubprocess: pass command line with double and multiple backslashes 
   via temporary file. (Bug #528944, Alexander Belchenko)
 * qlog, qbrowse: Fix a bug when using with pyqt 4.7.2. (Bug #544928,
   Gary van der Merwe)


0.18.4 "Pussy-willow" - 2010/03/22
----------------------------------
Bugfixes in the stable branch. Suitable for bzr 2.1.x.

 * Improved support for Redmine bugs URL. (Bug #538414, Alexander Belchenko)
 * TreeWidget: Fix a bug where refreshing may result in data inconsistencies.
   This bug was causing a number of knock on bugs.
   (Bug #538753, Gary van der Merwe)